{
    "name": "PlayerMovementBigActionMap",
    "maps": [
        {
            "name": "RegMove",
            "id": "b6325fd2-ca52-4890-a78d-83e00412efb3",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "e4e3fcb4-53d7-4a6a-a37f-ac8b763c3914",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "dc1674e4-be1d-466c-94ba-62d951b477ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "5af39b19-3fc5-4f11-a097-90c14fab567b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f0245036-c990-4a1f-91f5-e88d65382a43",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d014e3b5-4947-46a9-97b9-55ea76130995",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a3928e9-ba6e-44ec-8517-851662b5e1a2",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BikeMove",
            "id": "b75671d3-199b-412e-b667-57011f94f87f",
            "actions": [
                {
                    "name": "MoveBike",
                    "type": "Value",
                    "id": "37bb8d18-7682-446d-b14e-89168901cb14",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JumpBike",
                    "type": "Button",
                    "id": "21fffe4d-448c-4587-b174-cdd543ff2cd7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpeedBike",
                    "type": "Value",
                    "id": "433522e0-51e8-4cbf-86e9-9f204c3bbf4d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Break",
                    "type": "Button",
                    "id": "a6ca5ad1-1d6e-4eac-809f-a306d667b4aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b392b462-efc7-4ea1-82c1-bcc002e04f86",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBike",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6c349cc-6736-415c-8485-e0b8bbd264ff",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpBike",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c92cdc15-caec-4614-ba12-f5aa9ccff9eb",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedBike",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8789e4ef-4f64-4666-b119-4f288611dac5",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Break",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "JetpackMove",
            "id": "91916a28-680d-4d9b-a6b5-ed72521e7ef5",
            "actions": [
                {
                    "name": "Jetpackmove",
                    "type": "PassThrough",
                    "id": "ac3fa0f0-d749-4ff6-bb2f-8f2fce2c3101",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JetPackRise",
                    "type": "Button",
                    "id": "7a80b5e2-9195-4f84-baf3-e989727d5428",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dd269cc5-68ca-44a7-9b39-d163df40478f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jetpackmove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93e511da-445c-4031-802b-187033431175",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JetPackRise",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Climbmove",
            "id": "7c37886d-6e37-4754-bfdb-e583bc0d6204",
            "actions": [
                {
                    "name": "MoveHandsAndArms",
                    "type": "PassThrough",
                    "id": "8d4382e7-0b64-4c5d-84a4-78cf4d298ea6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightHand",
                    "type": "Button",
                    "id": "721b5064-3d4e-4e2d-b8e8-6ed1fefc6706",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftHand",
                    "type": "Button",
                    "id": "a2a858ff-1c98-4cb2-97ec-a26c6b0e925d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightFoot",
                    "type": "Button",
                    "id": "f4940311-2a75-4873-bd09-10bec62d8e16",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftFoot",
                    "type": "Button",
                    "id": "1093f14f-5c65-411a-b029-e4d261fc36d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2170427d-54cf-41ad-a892-adfc88afa41f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHandsAndArms",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "648a25fa-a0a8-42a9-9e9a-a8b02fc02a13",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "229230f9-b834-442f-a617-05c6c9d49f35",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "533e3292-83ea-4971-b57b-3f4fc32fc214",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightFoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34c13398-cb98-48b0-95f2-75d5150566aa",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftFoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interaction",
            "id": "f650d2de-0b10-44fe-b2d3-508155c367d2",
            "actions": [
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "12c7771e-3a23-4205-a1fa-463562119b4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Accept",
                    "type": "Button",
                    "id": "f468410f-e15d-4f9d-b5f3-9d28ff45fc3b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "c567cdf5-c46b-44a6-aa20-214e0ccf39a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchVheicle",
                    "type": "Button",
                    "id": "5a2612de-96ae-4ce6-b407-b10d429d81e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ed276988-1db0-46fb-8f11-443e5fd14216",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91e719fd-2e47-4bc9-a8e9-a656f711785e",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accept",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e82dfe1-e156-4691-a256-31fca58e81b4",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c9d11fd-b167-437d-8150-6615fcbf13de",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchVheicle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}